jk import leaves out a POM's -J--add-exports and -J--add-opens lines that open the jdk.compiler packages jk starts every compiler worker with, and writes one import-report row naming them and their count, so zipkin's Error Prone configuration imports without the lines the engine would only drop; the grant itself lives in the host module both the engine and the importer read